# cloud-compare-plugin

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
docs/: windows-setup.md
mcp/: claude_desktop_config.example.json  interpret.py  server.py
plugin/: CMakeLists.txt  info.json  qBuildingDims.qrc
plugin/include/: BuildingDims.h  CMakeLists.txt  Drawings.h  DxfWriter.h  Openings.h  Planes.h  qBuildingDims.h  qBuildingDimsCommand.h
plugin/src/: BuildingDims.cpp  CMakeLists.txt  Drawings.cpp  DxfWriter.cpp  Openings.cpp  Planes.cpp  qBuildingDims.cpp
scripts/: build-linux.sh  build-windows.ps1  integrate.sh  verify-standalone.sh
